--- a/gitops/apps/home-assistant/configuration/scripts/smooth_transition.yaml
+++ b/gitops/apps/home-assistant/configuration/scripts/smooth_transition.yaml
@@ -323,6 +323,7 @@ smooth_transition:
                     {% endif %}
                   {% endfor %}
                   {# Fallback: if no lights found in scenes, try to find lights by room name #}
+                  {# Uses 'light.{{ room }}' pattern (e.g., 'light.living_room' when room='living_room') #}
                   {% if lights | length == 0 %}
                     {% set all_lights = states.light | map(attribute='entity_id') | list %}
                     {% set room_light = 'light.' ~ room %}
